[package]
name = "noon"
version = "0.1.0"
description = "Strongly-typed, compile-time mediator"
authors = ["toshokan <toshokan@shojigate.net>"]
homepage = "https://github.com/toshokan/noon"
repository = "https://github.com/toshokan/noon"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
